examples/should_pass/borrow-branch.anvil
proc top() {
    reg r : logic;
    loop {
        if 1'b1 {
            set r := 1'b1
        } else {
            let w = *r;
            cycle 1 >>
            dprint "Value = %d" (w)
        }
    }
}