examples/should_fail/sync-static-dyn-bad.anvil
chan ch = {
    left req: (logic[8]@#1) @#1-@dyn
}

proc slave(ep : left ch) =
    loop {
        let r = recv ep.req in
        r =>
        dprint "Value = %d" (r);
        cycle 1
    }

proc top() =
    chan le -- ri : ch
    spawn slave(le)
    reg r : logic[8]

    loop {
        send ri.req(*r) =>
        set r := *r + 8'd1
        => cycle 1
    }

